# at_2048

./: .gitignore  CONTRIBUTING.md  Cargo.toml  justfile  prod-docker-compose.yml  rust-toolchain.toml
admin_2048/: Cargo.toml
admin_2048/src/: main.rs
api_2048/: Cargo.toml
app_2048/: Cargo.toml  bacon.toml
app_2048/src/: lib.rs
app_2048/src/pages/: game.rs  history.rs  login.rs
appview_2048/: Cargo.toml
appview_2048/src/: main.rs
client_2048/: Cargo.toml  package-lock.json
client_2048/.cargo/: config.toml
client_2048/src/: agent.rs  idb.rs  lib.rs  oauth_client.rs  store.rs
client_2048/src/at_repo_sync/: mod.rs
client_2048/src/pages/: callback.rs  game.rs  history.rs  login.rs  mod.rs  stats.rs
dockerfiles/: AppView.Dockerfile  Caddy.Dockerfile
production_configs/: client_metadata.json
