[workspace]
members = ["admin_2048",
    "api_2048",
    "app_2048",
    "types_2048",
]
resolver = "2"

[workspace.dependencies]
atrium-api = "0.25.3"
atrium-common = "0.1.2"
atrium-identity = "0.1.4"
atrium-oauth = "0.1.2"
atrium-xrpc-client = "0.5.14"
twothousand-forty-eight = { version = "0.22.1", features = ["wasm", "wasm-bindgen"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }